# WinSSTV

./: .gitignore  CMakeLists.txt  README.md  WinSSTV.pro
docs/: DEVELOPERS.md  instructions.txt
src/: main.cpp
src/core/dsp/: filters.cpp  filters.h  resonantfilter.h  synthes.cpp  synthes.h
src/core/sound/: soundbase.cpp  soundbase.h  soundwindows.cpp  soundwindows.h  wavio.cpp
src/core/sstv/: sstvparam.cpp  sstvparam.h  sstvrx.cpp  sstvrx.h  sstvtx.cpp  sstvtx.h  syncprocessor.cpp  syncprocessor.h  visfskid.cpp  visfskid.h
src/core/sstv/modes/: modebase.cpp  modebase.h  modegbr2.cpp  moderobot2.cpp
src/core/utils/: filewatcher.cpp  ftpfunctions.cpp  ftpthread.cpp  ftpthread.h  hybridcrypt.cpp  jp2io.cpp  logging.cpp  logging.h  qftp.cpp  qftp.h.disabled  rigcontrol.cpp  rigcontrol.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow_ptt.cpp  overlaywidget.cpp  overlaywidget.h  textoverlaydialog.cpp  textoverlaydialog.h  txworker.cpp  txworker.h  waterfallwidget.cpp  waterfallwidget.h
src/stubs/: appdefs.h  appglobal.cpp  appglobal.h  configparams.h  dispatcher.cpp  dispatcher.h  imageviewer.h  testpatternselection.h
tools/: gen_robot24_test.py  gen_sstv_test.py
